NEWS for the R Package Luminescence

Changes in version 0.4.3 (XXth, 2015):

  Bugfixes and changes:

         • ‘calc_MinDose()’

             • Fixed a false argument in ‘parallel::makeCluster()’ that
               unintentionally required the 'snow' package.

         • ‘extract_IrradiationTimes()’

             • Argument ‘file.XSYG’ replaced by ‘object’,

             • allow input for ‘RLum.Analysis’ object. In such cases
               the arguments ‘file.BINX’ and ‘recordType’ are ignored.
               This mode gives more flexibility in applying this
               function,

             • new argument ‘compatibility.mode’ to trigger the write
               output of the BIN/BINX-file.

         • ‘plot_Histogram()’

             • Argument 'breaks' was without function due to a coding
               error. Corrected. (#217),

             • argument 'breaks' removed from the argument list,
               however, supported via the ‘'...'’ argument.

         • ‘readBIN2R()’

             • Support for BIN/BINX-file version 07 added thanks to the
               support by Torben Lapp (#215).

         • ‘writeR2BIN()’

             • Support for BIN/BINX-file version 07 added thanks to the
               support by Torben Lapp (#215),

             • new argument ‘compatibility.mode’ to avoid position
               numbers >48. This may cause errors using external
               software like the Analyst. The old version number will
               be added in the comment field.

  Internals:

         • Description on the class ‘Risoe.BINfileData’ updated in
           accordance with the implemented changes on the import.

Changes in version 0.4.2 (March 23th, 2015):

  New functions:

         • ‘calc_IEU()’: Apply the internal-external-uncertainty (IEU)
           model after Thomsen et al. (2007) to a given De distribution

         • ‘extract_IrradiationTimes()’: Extract irradiation times from
           an XSYG file
